styling changes and fixes, related to switches and virtual devices
To avoid unintended bleeding of css styling into other parts of the UI, we now
use the CSS @scope directive with "@scope (.victron-form)". We probably don't
use it everywhere yet, but can enhance this in future CSS changes.

Squashed commit of the following:

commit 5f967c39595736de12ec6f95794ac2a37c480fe8
Author: Chris Oloff <chris@uber5.com>
Date:   Fri Jan 9 10:06:25 2026 +0200

    run linter

commit b15db2469a229b44e579ee7cb0f62c3e7929aa3d
Author: Chris Oloff <chris@uber5.com>
Date:   Fri Jan 9 09:06:16 2026 +0200

    styling radio group, simplified and better, wip

commit 3f1d349c3a08fbfffcf2298a516bfcabd105a465
Author: Chris Oloff <chris@uber5.com>
Date:   Fri Jan 9 07:50:12 2026 +0200

    styling radio group, simplified but wrong, wip

commit cb5a5bdbdeca1977ca5f4d46ca9cb77a7fe7e7b2
Author: Chris Oloff <chris@uber5.com>
Date:   Fri Jan 9 07:29:34 2026 +0200

    virtual devices views: add resources functions after 'npm run build'

commit 6c57761581bc52ed1ed2ce1b603614412cfd4674
Author: Chris Oloff <chris@uber5.com>
Date:   Thu Jan 8 12:39:24 2026 +0200

    virtual devices views: fix increasing whitespace when switching device type, fix battery note width

commit f222cf72af70ea0bd995778ea702256f3c426dd0
Author: Chris Oloff <chris@uber5.com>
Date:   Mon Dec 22 16:23:09 2025 +0200

    virtual switch, add missing 'CustomName' property

commit dea47c3ee9d808f4ab46e98e5467ccbef249c7e0
Author: Chris Oloff <chris@uber5.com>
Date:   Sun Dec 21 18:28:28 2025 +0200

    resources updated after running lint and build

commit be6ee2a2580c7dcf89370a87376a1062aa87fd7d
Author: Chris Oloff <chris@uber5.com>
Date:   Sun Dec 21 18:25:57 2025 +0200

    css changes, remove label coloring (used for debugging and testing)

commit 92cd8268ca79a0ea707d250b4fc2b502f7a6943f
Author: Chris Oloff <chris@uber5.com>
Date:   Sun Dec 21 18:25:22 2025 +0200

    dropdown switch, fix layout for options (dropdown labels)

c

--- a/resources/victron-styles.css
+++ b/resources/victron-styles.css
@@ -174,19 +174,36 @@
   margin-bottom: 12px;
 }
 
-/* Standalone deprecation notice for Virtual Device (no .victron-form wrapper) */
-.deprecation-notice {
-  padding: 12px;
-  width: 430px;
-  background-color: #f0f7ff;
-  border: 1px solid #c5dff8;
-  border-radius: 3px;
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
+/* Standalone deprecation notice, used for Virtual Device for now */
 
-.deprecation-notice .fa {
-  margin-right: 12px;
+@scope (.victron-form) {
+  .deprecation-notice {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    padding: 12px;
+    margin: 12px 0;
+    width: 100%;
+    max-width: 468px;
+    background-color: #f0f7ff;
+    border: 1px solid #c5dff8;
+    border-radius: 3px;
+    font-size: 0.95em;
+    line-height: 1.5;
+    box-sizing: border-box;
+  }
+
+  .deprecation-notice .fa {
+    color: #4a9eff;
+    flex-shrink: 0;
+    margin-top: 2px;
+  }
+
+  .deprecation-notice i:not(.fa) {
+    color: #333;
+    font-style: normal;
+  }
+
 }
 
 /* RGB control checkboxes spacing */
@@ -268,7 +285,7 @@
   background-color: #fafafa;
   border: 1px solid #e8e8e8;
   border-radius: 3px;
-  width: 456px;
+  width: 468px;
   box-sizing: border-box;
   font-size: 0.95em;
 }
